Changelog
=========

0.3 (unreleased)
----------------

- Remove empty skins/ folders doormat_styles/ and doormat_templates/ (fixes
  http://plone.org/products/doormat/issues/4: Skin dirs missing from egg)

0.2 (2010-06-11)
----------------

- Add viewlet to browser layer (fixes
  http://plone.org/products/doormat/issues/3: Uninstall cleanly)

0.1.1 (2010-06-09)
------------------

- added locales/NOTEMPTY.txt to ensure locales/ is added to egg. This fixes #1
  (http://plone.org/products/doormat/issues/1)
- updated doc

0.1 (2010-06-08)
----------------

Initial release
