@@ -16,10 +16,33 @@
      permission="zope2.View"
      />
 
+  <browser:page
+     for="..content.interfaces.IDoormat"
+     name="doormat-view-bare"
+     class=".views.DoormatView"
+     template="doormat_bare_view.pt"
+     permission="zope2.View"
+     />
+
+  <browser:page
+      for="..content.interfaces.IDoormat"
+      name="doormat-macros"
+      template="macros.pt"
+      permission="zope.Public"
+      />
+
   <browser:viewlet
       name="doormat.footer"
       manager="plone.app.layout.viewlets.interfaces.IPortalFooter"
       template="doormat_viewlet.pt"
+      permission="zope2.View"
+      layer=".interfaces.IDoormatLayer" 
+      />
+
+ <browser:viewlet
+      name="doormat.footer.bare"
+      manager="plone.app.layout.viewlets.interfaces.IPortalFooter"
+      template="doormat_viewlet_bare.pt"
       permission="zope2.View"
       layer=".interfaces.IDoormatLayer" 
       />
