@@ -1,0 +1,1 @@
+<div metal:use-macro="view/context/@@doormat-macros/body" />
