@@ -1,33 +1,5 @@
 <div class="row">
   <div class="cell width-full position-0" >
-    <div id="doormat-container">
-      <h2 tal:define="title view/getDoormatTitle"
-          tal:condition="title"
-          tal:content="title"
-          >
-        [Doormat title]
-      </h2>
-      <div class="doormatColumn" 
-          tal:repeat="column view/getDoormatData">
-        <h3 tal:condition="column/show_title"
-            tal:content="column/column_title">
-          [Column title]
-        </h3>
-        <dl class="doormatSection" tal:repeat="section column/column_sections">
-          <dt class="doormatSectionHeader"
-              tal:condition="section/show_title"
-              tal:content="section/section_title">[title for section]</dt>
-          <dd class="doormatSectionBody"
-              tal:repeat="link section/section_links">
-            <a tal:attributes="
-                href link/link_url;
-                "
-                tal:content="link/link_title">
-              [link title]
-            </a>
-          </dd>
-        </dl>
-      </div>
-    </div>
+    <div metal:use-macro="view/context/@@doormat-macros/body" />
   </div>
 </div>
